Error: .size expression for ff_fft_calc_neon does not evaluate to a constant
Categories
(Core :: Audio/Video, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox105 | --- | unaffected |
firefox106 | --- | wontfix |
firefox107 | --- | fixed |
People
(Reporter: ray-v, Assigned: padenot)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Building FF106.0b6, changeset b382879a5ba6, for armv7 fails with this error:
media/ffvpx/libavcodec/arm
media/ffvpx/libavcodec/arm/fft_neon.o
media/ffvpx/libavcodec/arm/fft_vfp.o
/tmp/ccSqKoQI.s: Assembler messages:
/tmp/ccSqKoQI.s: Error: .size expression for ff_fft_calc_neon does not evaluate to a constant
/tmp/ccSqKoQI.s: Error: .size expression for ff_fft_permute_neon does not evaluate to a constant
gmake[4]: *** [/mozbuild/mozilla/config/rules.mk:664: fft_neon.o] Error 1
gmake[3]: *** [/mozbuild/mozilla/config/recurse.mk:72: media/ffvpx/libavcodec/arm/target-objects] Error 2
gmake[3]: *** Waiting for unfinished jobs....
gmake[2]: *** [/mozbuild/mozilla/config/recurse.mk:34: compile] Error 2
gmake[1]: *** [/mozbuild/mozilla/config/rules.mk:361: default] Error 2
gmake: *** [client.mk:63: build] Error 2
The problem is introduced by the fix for bug #1765480.
Reversing the patch for c174bd2624e2 [configs], and the diffs in 2b8ef32d5cbe relevant to media/ffvpx/libavcodec/arm only [arm/flacdsp_init_arm.c and arm/cpu.c], fft_neon.o and fft_vfp.o will build.
Updated•2 years ago
|
Comment 1•2 years ago
|
||
:padenot, since you are the author of the regressor, bug 1765480, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
Without a # include "config_unix_arm.h"
option in config.h, it's the #define EXTERN_ASM _
in config_generic.h that causes the error.
This fixes building with gcc
--- media/ffvpx/config_override.h
+++ media/ffvpx/config_override.h
@@ -30,3 +30,10 @@
#endif
+// bug 1793289
+// override '#define EXTERN_ASM _' in config_generic.h
+#if defined(__GNUC__) && defined(__arm__)
+#undef EXTERN_ASM
+#define EXTERN_ASM
+#endif
+
#endif
Assignee | ||
Comment 3•2 years ago
|
||
Thanks to Ray Vine <ray-v@inbox.lv> for the bug report and a suggested fix.
Updated•2 years ago
|
Assignee | ||
Comment 4•2 years ago
|
||
Thanks Ray, I'm attaching a patch with your suggestion, this should land shortly.
Comment 5•2 years ago
|
||
Set release status flags based on info from the regressing bug 1765480
Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 7•2 years ago
|
||
bugherder |
Description
•