Bug 1793289 - Override EXTERN_ASM when building ffvpx in generic / no asm configuration. r=alwu

Thanks to Ray Vine <ray-v@inbox.lv> for the bug report and a suggested fix.

Differential Revision: https://phabricator.services.mozilla.com/D158679